solve background image issue

--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
 
     <!--start client say & contact area -->
     <section class="client-say-area">
-        <h1>What Client are say</h1>
-        <h3>Bruce Mokky</h3>
-        <p>Founder & CEO Alies</p>
-        <q>It is a long established fact that a reader will be distracted by the readable <br>content of a page when
-            looking at its layout.</q>
+       <div class="client-review">
+            <h1>What Client are say</h1>
+            <h3>Bruce Mokky</h3>
+            <p>Founder & CEO Alies</p>
+            <q>It is a long established fact that a reader will be distracted by the readable <br>content of a page when
+                looking at its layout.</q>
+       </div>
 
         <div class="contact-area">
             <h5> Leave me a message in the</h>
-                <h3> kmahmud101@gmail.com</h3>
+            <h3> kmahmud101@gmail.com</h3>
         </div>
 
 
@@ -87,7 +89,7 @@
 
     <!-- Footer Area -->
     <footer>
-        <p>programminghero iniative 2022 &#169; all right reserved</p>
+        <p>programminghero initiative 2022 &#169; all right reserved</p>
     </footer>
 
 
